Adjust name and title for site

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Ant
+title: The busy Ant
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -57,7 +57,7 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "Anthony Hillairet"
+  name   : "Anthony \"Ant\" Hillairet"
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "Scientist, leader, tech passionate, python developer, amateur baker, husband, father … if it involves learning and problem-solving, I’m in!"
   links:
