Add the canadian citizenship test post & timeline
commit 75d34dbdc7d9d9060c1a549009de146daa44036b
Author: Ant <anthony.hillairet@gmail.com>
Date:   Sat Jul 8 09:19:19 2023 -0700

    Bring over latest changes

commit d3527cf7901af3a698163c7b78f448a87557afab
Author: Ant <anthony.hillairet@gmail.com>
Date:   Sat Jul 8 09:19:03 2023 -0700

    Add thank you to Rahul and change date

commit 28fb4e2614d36f8d96cc21bd930e21d79d2d9c32
Author: Ant <anthony.hillairet@gmail.com>
Date:   Sat Jul 8 08:09:38 2023 -0700

    Edit a little bit

commit 084e43c97e1aa3fd849d4ec27bd90a620ff238ce
Merge: 0d7c1cd 38c0853
Author: Ant <anthony.hillairet@gmail.com>
Date:   Sat Jul 8 08:06:30 2023 -0700

    Merge branch 'main' into add-canadian-citizenship-test-submodule

commit 0d7c1cd544772d320cb35fa3421f02ea0a5f7210
Author: Ant <anthony.hillairet@gmail.com>
Date:   Sat Jul 8 07:36:08 2023 -0700

    First version of the post presenting timeline

commit 8493d656e758ce83e838c191436b2406bf7c0181
Author: Ant <anthony.hillairet@gmail.com>
Date:   Sat Jul 8 07:35:40 2023 -0700

    Pull latest version with new file structure

commit 32eb018dbf01e482979fb675604928a2d6bf0c96
Author: Ant <anthony.hillairet@gmail.com>
Date:   Fri Jun 30 06:53:09 2023 -0700

    Add canadian citizenship test as submodule

--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,8 @@ exclude:
   - README.md
   - Gemfile
   - Gemfile.lock
+  - canadian-citizenship-test/README.md
+  - canadian-citizenship-test/LICENSE
 #   - node_modules
 #   - vendor/bundle/
 #   - vendor/cache/
