--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: The busy Ant
+title: Sharpen the Saws
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Just like sharpening a saw, improving yourself takes time, energy and focus.
+  In a world as complex as ours, having multiple skills to offer is an advantage.
+  So don't wait and start sharpening your saws today!
 github_username: hillairet
 minimal_mistakes_skin: air
 search: true
@@ -40,6 +40,7 @@ include:
 # to override the default setting.
 exclude:
   - docker-compose.yml
+  - Dockerfile
   - README.md
   - Gemfile
   - Gemfile.lock
